[package]
name = "polycentric"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polycentric"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    ]

[dependencies]
anchor-lang = { version="0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-token-metadata-interface = { version = "0.3.5", optional = true }
the_ark_program = { path = "../../programs/the_ark_program", features = ["cpi"] }
mpl-token-metadata = "4.1.2"
spl-type-length-value = "0.4.6"
